Updated with Image

--- a/Final/final_report.ipynb
+++ b/Final/final_report.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#IMG"
+    "<img src='languages.png' width='1500' height='700' align='center'/>"
    ]
   },
   {
@@ -51,7 +51,11 @@
    "id": "d63ea423-ffff-4db2-b9a5-cd732dd36094",
    "metadata": {},
    "source": [
-    "## Project Description"
+    "## Project Description\n",
+    "\n",
+    "The Billboard Hot 100 is the music industry standard record chart in the United States for songs, published weekly by Billboard magazine. Chart rankings are based on sales, radio play, and online streaming in the United States.\n",
+    "\n",
+    "Every week, Billboard releases \"The Hot 100\" chart of songs that were trending on sales and airplay for that week. This project used a dataset from [Kaggle](https://www.kaggle.com/datasets/dhruvildave/billboard-the-hot-100-songs) that is a collection of all \"The Hot 100\" charts released since its inception in 1958."
    ]
   },
   {
