--- a/Final/final_report.ipynb
+++ b/Final/final_report.ipynb
@@ -5,8 +5,9 @@
    "id": "0a54c8f7-aa1f-4305-bbf3-62fb05b75fbc",
    "metadata": {},
    "source": [
-    "TITLE\n",
-    "subtitle"
+    "# A LYRICAL EVOLUTION: \n",
+    "\n",
+    "### An Investigation of the Cultural Lexicon & Historical Relevance of U.S. Popular Music from 1958 - 2021"
    ]
   },
   {
@@ -22,20 +23,18 @@
    "id": "0c102d20-adbd-44b0-a0fc-0062cacb04eb",
    "metadata": {},
    "source": [
-    "**Capstone Project & Final Report Created By:**\n",
+    "**An NLP based Capstone Project & Final Report Created By:**\n",
     "\n",
     "Ben Smith, Chris Teceno, Jerry Nolf & Rachel Robbins-Mayhill\n",
     "Codeup   |   Innis Cohort   |   June 2022  "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "5418c18d-08f6-47d1-8acf-5ecc4cbd04cc",
+   "cell_type": "markdown",
+   "id": "0330cf87-3d96-49e2-93f9-f638738c3096",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "<img src='languages.png' width='1500' height='700' align='center'/>"
+    "<img src=\"dataset-cover.png\">"
    ]
   },
   {
@@ -43,17 +42,26 @@
    "id": "819a8499-ba91-4a83-89c6-67dd43412f15",
    "metadata": {},
    "source": [
-    "## Project Goal"
+    "## Project Goal\n",
+    "This project aims to investigate the patterns of song lyrics across decades using Natural Language Processing techniques including Topic Modeling, Sentiment Analysis, and Term Frequency. "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d63ea423-ffff-4db2-b9a5-cd732dd36094",
+   "id": "ae16ef11-eaa7-47c1-a858-84593c0dfa32",
    "metadata": {},
    "source": [
     "## Project Description\n",
     "\n",
-    "The Billboard Hot 100 is the music industry standard record chart in the United States for songs, published weekly by Billboard magazine. Chart rankings are based on sales, radio play, and online streaming in the United States.\n",
+    "Songs are powerful tokens: they can soothe, validate, ignite, confront, and educate us – among other things. Like time capsules, they are now captured for eternity. The slang and language used are often indicative of the times, and you can probably recall exactly when a song was made based on what is mentioned. There’s nothing quite like a song to provide a picture of what was going on culturally at a specified time. Arguably, music is a catalyst for societal and cultural evolution like no other artform. It has been causing controversy and societal upheaval for decades, and it seems with every generation there’s a new musical trend that has the older generations shaking their heads and clutching their jewelry. \n",
+    "\n",
+    "\n",
+    "Traditionally, for centuries, songs have been passed down through generations, being sung like oral histories. However, with advancements of the 20th century, technology has made the world of music a much smaller place and, thanks to cheap, widely-available audio equipment, songs could suddenly be distributed on a much larger scale, having farther reaching impact, and a more permanent place in history. This project aims to take those technological advancements a step further in regards to the historical impact of song lyrics. By using machine learning and natural language processing methodologies,  investigate songs of the past, and categorize them in the decade i\n",
+    "\n",
+    "\n",
+    ", songs can be analyzed by machines to provide a window to their cultural revalence and societal impact. \n",
+    "\n",
+    "The Billboard Hot 100 is the music industry standard record chart in the United States for songs, published weekly by Billboard magazine. Chart rankings are based on sales, radio play, and online streaming in the United States. It is arguablly the best historical record of the  <img src='Billboard.png' width=\"350\" height=\"350\" align=\"left\"/> impact of specific popular songs over time. \n",
     "\n",
     "Every week, Billboard releases \"The Hot 100\" chart of songs that were trending on sales and airplay for that week. This project used a dataset from [Kaggle](https://www.kaggle.com/datasets/dhruvildave/billboard-the-hot-100-songs) that is a collection of all \"The Hot 100\" charts released since its inception in 1958."
    ]
@@ -68,6 +76,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fe434ce1-b1f0-4415-8403-23081cd5e590",
+   "metadata": {},
+   "source": [
+    "The initial hypothesis of this project was that we could use the top songs of each decade in conjunction with topic modeling to identify unique words or topics which could be used as a feature or a set of features to accurately predict the decade a song was on the Billboard Top 100 using machine learning. The thought behind this was that popular songs have been the historians of a unique lexicon, specific to their place in time. We believe the lyrics of popular songs could be analyzed through machine learning to identify societal trends in relationships, technology, sexuality, and vulgarity."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c142d940-b385-4db4-b002-1d76ab647b73",
    "metadata": {},
    "source": [
@@ -76,10 +92,33 @@
   },
   {
    "cell_type": "markdown",
+   "id": "89ddad9a-cfe1-4f58-8b8b-2b1cc20cd755",
+   "metadata": {},
+   "source": [
+    "The focus of this project is on identifying the decade a song first appeared on the Billboard Top 100. Below are some of the initial questions this project looked to answer throughout the Data Science Pipeline.\n",
+    " \n",
+    "##### Data-Focused Questions\n",
+    "- What are the most frequently occuring words?\n",
+    "- What are the most frequently occuring bigrams (pairs of words) by each decade?\n",
+    "- What decade did the song first appear in the top 100?\n",
+    "- What topics are most unique to each decade?\n",
+    "- Is there a correlation between sentiment and decade?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a68b0078-9645-445d-9dec-996ac6aa654e",
    "metadata": {},
    "source": [
     "## Key Findings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c0373f8-c854-40d9-a4ba-805f656e987e",
+   "metadata": {},
+   "source": [
+    "The key findings for this presentation are available in slide format by clicking on the [Final Slide Presentation](URL)."
    ]
   },
   {
@@ -109,17 +148,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4a7a8a76-8a52-468b-84d5-13ad0a952e25",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'final_acquire'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/jx/x5_xzwy107g6d0zd021r2ph40000gn/T/ipykernel_50453/2776771300.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mrequests\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mfinal_acquire\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mfinal_prepare\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mfinal_explore\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'final_acquire'"
+     ]
+    }
+   ],
    "source": [
     "# import for acquisition\n",
     "import os\n",
     "import json\n",
     "import requests\n",
-    "import wrangle\n",
-    "import model\n",
+    "import final_acquire\n",
+    "import final_prepare\n",
+    "import final_explore\n",
+    "import final_model\n",
     "from env import github_token, github_username\n",
     "\n",
     "# import for data manipulation\n",
