updated with proper topics

--- a/Drafts/jerry_workbook.ipynb
+++ b/Drafts/jerry_workbook.ipynb
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c738f167",
+   "id": "e427502b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,8 +110,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "c1d84b16",
+   "execution_count": 6,
+   "id": "4b6e361f",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
        "      <td>2014</td>\n",
        "      <td>363</td>\n",
        "      <td>0.9915</td>\n",
-       "      <td>Transcendental</td>\n",
+       "      <td>Sex</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -172,7 +172,7 @@
        "      <td>842</td>\n",
        "      <td>135</td>\n",
        "      <td>0.9169</td>\n",
-       "      <td>Dance</td>\n",
+       "      <td>Love</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -185,7 +185,7 @@
        "      <td>768</td>\n",
        "      <td>129</td>\n",
        "      <td>0.9989</td>\n",
-       "      <td>Nature</td>\n",
+       "      <td>Lost</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -198,7 +198,7 @@
        "      <td>954</td>\n",
        "      <td>172</td>\n",
        "      <td>0.9218</td>\n",
-       "      <td>Miracles</td>\n",
+       "      <td>Violence</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -211,7 +211,7 @@
        "      <td>1238</td>\n",
        "      <td>208</td>\n",
        "      <td>0.9984</td>\n",
-       "      <td>Transcendental</td>\n",
+       "      <td>Sex</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -232,21 +232,21 @@
        "3  jason table kept seeing look girl think make j...    2010              954   \n",
        "4  oh alive alive alive oh fly fly fly oh alive a...    2010             1238   \n",
        "\n",
-       "   word_count  sentiment      topic_name  \n",
-       "0         363     0.9915  Transcendental  \n",
-       "1         135     0.9169           Dance  \n",
-       "2         129     0.9989          Nature  \n",
-       "3         172     0.9218        Miracles  \n",
-       "4         208     0.9984  Transcendental  "
+       "   word_count  sentiment topic_name  \n",
+       "0         363     0.9915        Sex  \n",
+       "1         135     0.9169       Love  \n",
+       "2         129     0.9989       Lost  \n",
+       "3         172     0.9218   Violence  \n",
+       "4         208     0.9984        Sex  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "df.head()\n"
    ]
   },
   {
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "099cb479",
    "metadata": {},
    "outputs": [],
@@ -284,8 +284,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "268209dc",
+   "execution_count": 8,
+   "id": "3fa529d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,8 +301,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "3b7f66eb",
+   "execution_count": 9,
+   "id": "b8218fb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,25 +313,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "8f4de244",
+   "execution_count": 10,
+   "id": "1cd5e4e1",
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
     "# for ind, topic in enumerate(lda.components_):\n",
+    "#     print('-'*117)\n",
     "#     print('Top 50 words in topic {}'.format(ind))\n",
-    "#     print('-'*120)\n",
+    "#     print('-'*117)\n",
     "#     top_50 = topic.argsort()[-50:]\n",
-    "#     print([feature[i] for i in top_50], '\\n\\n')\n",
-    "#     print('-'*120)"
+    "#     print([feature[i] for i in top_50], '\\n\\n')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "a21e70c2",
+   "execution_count": 11,
+   "id": "467e55a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,8 +344,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "724dd675",
+   "execution_count": 12,
+   "id": "d017814c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,8 +358,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "e223fa97",
+   "execution_count": 13,
+   "id": "7693f8f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,8 +370,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "8575fe88",
+   "execution_count": 14,
+   "id": "8d0ee194",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,15 +382,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "eea07e88",
+   "execution_count": 15,
+   "id": "4a072791",
    "metadata": {},
    "outputs": [],
    "source": [
     "# # Creating a dictionary with key as topic numbers and value as topic names\n",
-    "# topic_label = {0:'Love', 1:'Kind Goodbye', 2:'Appeasing', 3:'Club', 4:'Country Life', 5:'Resentful Goodbye', \n",
-    "#                6:'Lost', 7:'Hard Times', 8:'Nature', 9:'Miracles', 10:'Money', 11:'Dance', 12:'Fun', \n",
-    "#                13:'Dance', 14:'Weekend', 15:'Transcendental', 16:'Sex', 17:'Summer', 18:'Spanish', 19:'Affection'}\n",
+    "# topic_label = {0:'Jealousy', 1:'Affection', 2:'Breakup', 3:'Dance', 4:'Holiday', 5:'Nature', \n",
+    "#                6:'Spanish', 7:'Transcendental', 8:'Lost', 9:'Violence', 10:'Youth', 11:'Love', 12:'Heartache', \n",
+    "#                13:'Money', 14:'Affection', 15:'Sex', 16:'Dance', 17:'Good Vibes', 18:'Americana', 19:'Breakup'}\n",
     "\n",
     "# # Mapping the dictionary with the dataframe to get the labels.\n",
     "# df['topic_name'] = df['topic'].map(topic_label)\n",
@@ -401,8 +401,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "4338aa40",
+   "execution_count": 16,
+   "id": "a551a289",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,8 +449,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "5e1998db",
+   "execution_count": 17,
+   "id": "9b1ef06a",
    "metadata": {
     "scrolled": false
    },
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "dbcd6510",
    "metadata": {},
    "outputs": [],
@@ -479,8 +479,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "f019374c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sentiments = sia\n",
+    "# df[\"positive\"] = [sentiments.polarity_scores(i)[\"pos\"] for i in df[\"lyrics\"]]\n",
+    "# df[\"negative\"] = [sentiments.polarity_scores(i)[\"neg\"] for i in df[\"lyrics\"]]\n",
+    "# df[\"neutral\"] = [sentiments.polarity_scores(i)[\"neu\"] for i in df[\"lyrics\"]]\n",
+    "# df['compound'] = [sentiments.polarity_scores(i)[\"compound\"] for i in data[\"lyrics\"]]\n",
+    "\n",
+    "# scores = df[\"lyrics\"].values\n",
+    "# sentiment = []\n",
+    "# for score in scores:\n",
+    "#     if score >= 0.05 :\n",
+    "#         sentiment.append('positive')\n",
+    "#     elif score <= -0.05 :\n",
+    "#         sentiment.append('negative')\n",
+    "#     else:\n",
+    "#         sentiment.append('neutral')\n",
+    "# data[\"sentiment_class\"] = sentiment"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "14052577",
+   "id": "a8152591",
    "metadata": {},
    "source": [
     "## Exploration"
@@ -488,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "64cb7be1",
    "metadata": {},
    "outputs": [
@@ -523,6 +548,9 @@
        "      <th>word_count</th>\n",
        "      <th>sentiment</th>\n",
        "      <th>topic_name</th>\n",
+       "      <th>positive</th>\n",
+       "      <th>negative</th>\n",
+       "      <th>neutral</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -537,7 +565,10 @@
        "      <td>2122</td>\n",
        "      <td>378</td>\n",
        "      <td>-0.9999</td>\n",
-       "      <td>Transcendental</td>\n",
+       "      <td>Sex</td>\n",
+       "      <td>0.052</td>\n",
+       "      <td>0.552</td>\n",
+       "      <td>0.395</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15627</th>\n",
@@ -550,7 +581,10 @@
        "      <td>2108</td>\n",
        "      <td>372</td>\n",
        "      <td>-0.9998</td>\n",
-       "      <td>Dance</td>\n",
+       "      <td>Money</td>\n",
+       "      <td>0.040</td>\n",
+       "      <td>0.448</td>\n",
+       "      <td>0.512</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17474</th>\n",
@@ -563,7 +597,10 @@
        "      <td>1187</td>\n",
        "      <td>204</td>\n",
        "      <td>-0.9998</td>\n",
-       "      <td>Miracles</td>\n",
+       "      <td>Violence</td>\n",
+       "      <td>0.057</td>\n",
+       "      <td>0.618</td>\n",
+       "      <td>0.325</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -580,13 +617,18 @@
        "15627 2011-12-10  rack rack city bitch rack rack rack city bitch...    2010   \n",
        "17474 2019-08-24  ayy bitch bad snakeskin ayy foreign dash know ...    2010   \n",
        "\n",
-       "       character_count  word_count  sentiment      topic_name  \n",
-       "1453              2122         378    -0.9999  Transcendental  \n",
-       "15627             2108         372    -0.9998           Dance  \n",
-       "17474             1187         204    -0.9998        Miracles  "
+       "       character_count  word_count  sentiment topic_name  positive  negative  \\\n",
+       "1453              2122         378    -0.9999        Sex     0.052     0.552   \n",
+       "15627             2108         372    -0.9998      Money     0.040     0.448   \n",
+       "17474             1187         204    -0.9998   Violence     0.057     0.618   \n",
+       "\n",
+       "       neutral  \n",
+       "1453     0.395  \n",
+       "15627    0.512  \n",
+       "17474    0.325  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "e07e37fb",
    "metadata": {},
    "outputs": [
@@ -633,6 +675,9 @@
        "      <th>word_count</th>\n",
        "      <th>sentiment</th>\n",
        "      <th>topic_name</th>\n",
+       "      <th>positive</th>\n",
+       "      <th>negative</th>\n",
+       "      <th>neutral</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -647,7 +692,10 @@
        "      <td>696</td>\n",
        "      <td>130</td>\n",
        "      <td>0.9999</td>\n",
-       "      <td>Weekend</td>\n",
+       "      <td>Affection</td>\n",
+       "      <td>0.907</td>\n",
+       "      <td>0.006</td>\n",
+       "      <td>0.086</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15173</th>\n",
@@ -660,7 +708,10 @@
        "      <td>1749</td>\n",
        "      <td>300</td>\n",
        "      <td>0.9999</td>\n",
-       "      <td>Weekend</td>\n",
+       "      <td>Affection</td>\n",
+       "      <td>0.616</td>\n",
+       "      <td>0.067</td>\n",
+       "      <td>0.317</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14050</th>\n",
@@ -673,7 +724,10 @@
        "      <td>1620</td>\n",
        "      <td>298</td>\n",
        "      <td>0.9999</td>\n",
-       "      <td>Weekend</td>\n",
+       "      <td>Affection</td>\n",
+       "      <td>0.723</td>\n",
+       "      <td>0.038</td>\n",
+       "      <td>0.239</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -690,13 +744,18 @@
        "15173  pill potion overdosin angry still love pill po...    2010   \n",
        "14050  said want stay together think ooh red light kn...    2010   \n",
        "\n",
-       "       character_count  word_count  sentiment topic_name  \n",
-       "15734              696         130     0.9999    Weekend  \n",
-       "15173             1749         300     0.9999    Weekend  \n",
-       "14050             1620         298     0.9999    Weekend  "
+       "       character_count  word_count  sentiment topic_name  positive  negative  \\\n",
+       "15734              696         130     0.9999  Affection     0.907     0.006   \n",
+       "15173             1749         300     0.9999  Affection     0.616     0.067   \n",
+       "14050             1620         298     0.9999  Affection     0.723     0.038   \n",
+       "\n",
+       "       neutral  \n",
+       "15734    0.086  \n",
+       "15173    0.317  \n",
+       "14050    0.239  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,27 +767,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "0bfcf136",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def word_cloud(topic):\n",
-    "    # plt.figure(figsize = (8,6))\n",
-    "    topic_words = [feature[i] for i in lda.components_[topic].argsort()[-50:]]\n",
-    "    cloud = WordCloud(stopwords = STOPWORDS, background_color = 'white',\n",
-    "                      width=2500, height=1800).generate(\" \".join(topic_words))\n",
-    "\n",
-    "    print('\\nWordcloud for topic:', topic_name, '\\n')\n",
-    "    plt.imshow(cloud)\n",
-    "    plt.axis('off')\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a8ba7050",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -736,7 +776,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53900f7c",
+   "id": "c9dbc8d5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9bd0fee",
    "metadata": {},
    "outputs": [],
    "source": []
