--- a/Drafts/chris_work.ipynb
+++ b/Drafts/chris_work.ipynb
@@ -12,10 +12,10 @@
     "# # Scrape data from an HTML document\n",
     "# from bs4 import BeautifulSoup\n",
     "# I/O\n",
-    "import os\n",
+    "#import os\n",
     "# Search and manipulate strings\n",
     "import re\n",
-    "import lyricsgenius\n",
+    "#import lyricsgenius\n",
     "import pandas as pd\n",
     "import nltk\n",
     "import draft_prepare as prep\n",
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -968,7 +968,8 @@
     "\n",
     "~~Word Count~~\n",
     "\n",
-    "    Unique words per song\n",
+    "~~Unique words per song~~\n",
+    "\n",
     "    Unique words per decade\n",
     "\n",
     "~~Ratio verse to chorus~~\n",
@@ -2128,6 +2129,139 @@
     "df['unique_words'] = df.lyrics.apply(get_unique_words)\n",
     "df['n_unique_words'] = df.unique_words.apply(lambda x: len(x.split()))\n",
     "df.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "adding sentiment category ****\r"
+     ]
+    }
+   ],
+   "source": [
+    "df= prep.get_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>artist</th>\n",
+       "      <th>date</th>\n",
+       "      <th>lyrics</th>\n",
+       "      <th>raw_lyrics</th>\n",
+       "      <th>decade</th>\n",
+       "      <th>character_count</th>\n",
+       "      <th>word_count</th>\n",
+       "      <th>unique_words</th>\n",
+       "      <th>unique_words_count</th>\n",
+       "      <th>sentiment</th>\n",
+       "      <th>sentiment_category</th>\n",
+       "      <th>place_words</th>\n",
+       "      <th>chorus_count</th>\n",
+       "      <th>verse_count</th>\n",
+       "      <th>verse_chorus_ratio</th>\n",
+       "      <th>pre_chorus_count</th>\n",
+       "      <th>outro_count</th>\n",
+       "      <th>bridge_count</th>\n",
+       "      <th>hook_count</th>\n",
+       "      <th>bigrams</th>\n",
+       "      <th>trigrams</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>#1</td>\n",
+       "      <td>Nelly</td>\n",
+       "      <td>2001-10-20</td>\n",
+       "      <td>uh uh uh got bring attention dirty better watc...</td>\n",
+       "      <td>#1 LyricsUh uh uh I just gotta bring it to the...</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>363</td>\n",
+       "      <td>touch top attention wait cricket lock eheh mea...</td>\n",
+       "      <td>228</td>\n",
+       "      <td>0.9915</td>\n",
+       "      <td>very positive</td>\n",
+       "      <td>[hook] [hook] [hook]</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>[(uh, uh), (uh, uh), (uh, got), (got, bring), ...</td>\n",
+       "      <td>[(uh, uh, uh), (uh, uh, got), (uh, got, bring)...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  title artist       date                                             lyrics  \\\n",
+       "0    #1  Nelly 2001-10-20  uh uh uh got bring attention dirty better watc...   \n",
+       "\n",
+       "                                          raw_lyrics  decade  character_count  \\\n",
+       "0  #1 LyricsUh uh uh I just gotta bring it to the...    2000             2014   \n",
+       "\n",
+       "   word_count                                       unique_words  \\\n",
+       "0         363  touch top attention wait cricket lock eheh mea...   \n",
+       "\n",
+       "   unique_words_count  sentiment sentiment_category           place_words  \\\n",
+       "0                 228     0.9915      very positive  [hook] [hook] [hook]   \n",
+       "\n",
+       "   chorus_count  verse_count  verse_chorus_ratio  pre_chorus_count  \\\n",
+       "0             0            0                 0.0                 0   \n",
+       "\n",
+       "   outro_count  bridge_count  hook_count  \\\n",
+       "0            0             0           3   \n",
+       "\n",
+       "                                             bigrams  \\\n",
+       "0  [(uh, uh), (uh, uh), (uh, got), (got, bring), ...   \n",
+       "\n",
+       "                                            trigrams  \n",
+       "0  [(uh, uh, uh), (uh, uh, got), (uh, got, bring)...  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.set_option('max_columns', 25)\n",
+    "df.head(1)\n"
    ]
   },
   {
