Updated through Prepare

--- a/Final/final_report.ipynb
+++ b/Final/final_report.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# A LYRICAL EVOLUTION: \n",
     "\n",
-    "### An Investigation of the Cultural Lexicon & Historical Relevance of U.S. Popular Music from 1958 - 2021"
+    "### An Investigation of the Cultural Lexicon & Historical Relevance of U.S. Popular Music from 1958 - Present"
    ]
   },
   {
@@ -43,7 +43,7 @@
    "metadata": {},
    "source": [
     "## Project Goal\n",
-    "This project aims to investigate the patterns of song lyrics across decades using Natural Language Processing techniques including Topic Modeling, Sentiment Analysis, and Term Frequency. "
+    "This project aims to investigate the patterns of song lyrics across decades using Natural Language Processing techniques including Topic Modeling, Sentiment Analysis, and Term Frequency using a Kaggle data set of the Billboard Top 100 Songs from 1958 - 2021 and lyrics pulled from the Genius.com API. We believe the lyrics of popular songs could be used as historical analysis through machine learning to identify changing societal trends in relationships, technology, sexuality, and vulgarity."
    ]
   },
   {
@@ -53,17 +53,15 @@
    "source": [
     "## Project Description\n",
     "\n",
-    "Songs are powerful tokens: they can soothe, validate, ignite, confront, and educate us – among other things. Like time capsules, they are now captured for eternity. The slang and language used are often indicative of the times, and you can probably recall exactly when a song was made based on what is mentioned. There’s nothing quite like a song to provide a picture of what was going on culturally at a specified time. Arguably, music is a catalyst for societal and cultural evolution like no other artform. It has been causing controversy and societal upheaval for decades, and it seems with every generation there’s a new musical trend that has the older generations shaking their heads and clutching their jewelry. \n",
+    "Songs are powerful tokens: they can soothe, validate, ignite, confront, and educate us – among other things. Like time capsules, they are captured for eternity. The slang and language used are often indicative of the times, and you can probably recall exactly when a song was made based on what is mentioned. Arguably, music is a catalyst for societal and cultural evolution like no other artform. It has been causing controversy and societal upheaval for decades, and it seems with every generation there’s a new musical trend that has the older generations shaking their heads. \n",
     "\n",
+    "For centuries, songs have been passed down through generations, being sung as oral histories. However, with advancements of the 20th century, technology has made the world of music a much smaller place and, thanks to cheap, widely-available audio equipment, songs are now distributed on a much larger scale, having farther reaching impact, and a more permanent place in history. \n",
     "\n",
-    "Traditionally, for centuries, songs have been passed down through generations, being sung like oral histories. However, with advancements of the 20th century, technology has made the world of music a much smaller place and, thanks to cheap, widely-available audio equipment, songs could suddenly be distributed on a much larger scale, having farther reaching impact, and a more permanent place in history. This project aims to take those technological advancements a step further in regards to the historical impact of song lyrics. By using machine learning and natural language processing methodologies,  investigate songs of the past, and categorize them in the decade i\n",
+    "This project aimed to combine the record of lyrical history and technological advancements to evaluate the changes in cultural lexicon and societal changes over the last 50+ years. Using machine learning and natural language processing methodologies we investigated the topics prevalent in songs of the past, predicted the decade in which they were written, and conducted historical analysis through exploration to identify changing societal trends in relationships, technology, sexuality, and vulgarity.\n",
     "\n",
+    "<img src='Billboard.png' width=\"350\" height=\"350\" align=\"left\"/> To do this, we acquired a [Kaggle](https://www.kaggle.com/datasets/dhruvildave/billboard-the-hot-100-songs) data set of the Billboard Top 100 Songs from its inception in 1958 to present. We then utilized the [Genius.com](https://genius.com/) API and LyricGenius Library to conduct web scraping to pull the lyrics for the specified songs which became the corpus for this project. After acquiring and preparing the corpus, our team conducted natural language processing exploration utilizing methods such as topic modeling, word clouds, and bigrams. We employed multiclass classification methods to create multiple machine learning models. The end goal was to create an NLP model that accurately predicted the decade a song first appeared on the Billboard Top 100 chart, based on the words and word combinations found in the lyrics of the song.\n",
     "\n",
-    ", songs can be analyzed by machines to provide a window to their cultural revalence and societal impact. \n",
-    "\n",
-    "The Billboard Hot 100 is the music industry standard record chart in the United States for songs, published weekly by Billboard magazine. Chart rankings are based on sales, radio play, and online streaming in the United States. It is arguablly the best historical record of the  <img src='Billboard.png' width=\"350\" height=\"350\" align=\"left\"/> impact of specific popular songs over time. \n",
-    "\n",
-    "Every week, Billboard releases \"The Hot 100\" chart of songs that were trending on sales and airplay for that week. This project used a dataset from [Kaggle](https://www.kaggle.com/datasets/dhruvildave/billboard-the-hot-100-songs) that is a collection of all \"The Hot 100\" charts released since its inception in 1958."
+    "We choose the Billboard Hot 100 song list as a focus because it is the music industry standard record chart in the United States for song popularity, published weekly by Billboard magazine. It provides a window into popular culture at a given time, by providing chart rankings of songs that were trending on sales, airplay, and now streaming for that week in the United States. It is arguably the best historical record of the impact of specific popular songs over time.\n"
    ]
   },
   {
@@ -79,7 +77,7 @@
    "id": "fe434ce1-b1f0-4415-8403-23081cd5e590",
    "metadata": {},
    "source": [
-    "The initial hypothesis of this project was that we could use the top songs of each decade in conjunction with topic modeling to identify unique words or topics which could be used as a feature or a set of features to accurately predict the decade a song was on the Billboard Top 100 using machine learning. The thought behind this was that popular songs have been the historians of a unique lexicon, specific to their place in time. We believe the lyrics of popular songs could be analyzed through machine learning to identify societal trends in relationships, technology, sexuality, and vulgarity."
+    "The initial hypothesis of this project was that we could use the top songs of each decade in conjunction with topic modeling to identify unique words or topics which could be used as features to accurately predict the decade a song was on the Billboard Top 100 using machine learning. The thought behind this was that popular songs have been the historians of a unique lexicon, specific to their place in time. We believe the lyrics of popular songs could be analyzed through machine learning to identify societal trends in relationships, technology, sexuality, and vulgarity."
    ]
   },
   {
@@ -102,7 +100,9 @@
     "- What are the most frequently occuring bigrams (pairs of words) by each decade?\n",
     "- What decade did the song first appear in the top 100?\n",
     "- What topics are most unique to each decade?\n",
-    "- Is there a correlation between sentiment and decade?"
+    "- Is there a correlation between sentiment and decade?\n",
+    "- How do topics, such as violence, sexual explicitness, technology references, or relationship references, change over time?\n",
+    "- How does foreign language usage change over time?"
    ]
   },
   {
@@ -118,7 +118,10 @@
    "id": "0c0373f8-c854-40d9-a4ba-805f656e987e",
    "metadata": {},
    "source": [
-    "The key findings for this presentation are available in slide format by clicking on the [Final Slide Presentation](URL)."
+    "The key findings for this presentation are available in slide format by clicking on the [Final Slide Presentation](https://www.canva.com/design/DAFCXoeG7z0/jNCtQkQFqyOTWS5Ckg8Xuw/view?utm_content=DAFCXoeG7z0&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton).\n",
+    "\n",
+    "\n",
+    "TBD......."
    ]
   },
   {
@@ -134,7 +137,19 @@
    "id": "3f447ae0-d3ba-4e65-9e65-923a31f642cb",
    "metadata": {},
    "source": [
-    "## I. ACQUIRE"
+    "## I. ACQUIRE\n",
+    "To acquire the data for this project, we utilized a [Kaggle](https://www.kaggle.com/datasets/dhruvildave/billboard-the-hot-100-songs) data set of the Billboard Top 100 Songs from its inception in 1958 to present. \n",
+    "\n",
+    "The dataset provided:\n",
+    "- date song was on the Billboard Top 100 \n",
+    "- rank of song  \n",
+    "- title\n",
+    "- artist name\n",
+    "- rank of song the previous week\n",
+    "- rank of song at it's peak week\n",
+    "- number of weeks song was on the Top 100  \n",
+    "\n",
+    "We selected only unique artists and songs, to ensure there were no duplicates, keeping only the earliest appearance on the chart to standardize the selections in the event of multiple appearances. Following song selection with the Kaggle dataset, we then obtained an API token to utilize the [Genius.com](https://genius.com/) API and [LyricGenius Library](https://pypi.org/project/lyricsgenius/) to conduct web scraping to pull the lyrics for the specified songs which became the corpus for this project."
    ]
   },
   {
@@ -169,11 +184,11 @@
     "import os\n",
     "import json\n",
     "import requests\n",
-    "import final_acquire\n",
-    "import final_prepare\n",
-    "import final_explore\n",
-    "import final_model\n",
-    "from env import github_token, github_username\n",
+    "import draft_acquire as acquire\n",
+    "import draft_prepare as prepare\n",
+    "import draft_explore as explore\n",
+    "import draft_model as model\n",
+    "\n",
     "\n",
     "# import for data manipulation\n",
     "import pandas as pd\n",
@@ -193,7 +208,7 @@
    "outputs": [],
    "source": [
     "# acquire data from .json saved and processed using functions found in wrangle.py\n",
-    "df = pd.read_json(\"data.json\")\n",
+    "df = pd.read_ccsv(\"____.csv\")\n",
     "df.head()"
    ]
   },
@@ -237,7 +252,7 @@
    "id": "db9df564-01cc-463b-96a6-8536629a9e95",
    "metadata": {},
    "source": [
-    "After data acquisition, the table was analyzed and cleaned to facilitate functional exploration and clarify variable confusion. The preparation of this data can be replicated using the prep_data  function saved within the prepare.py file inside the 'NLP-Project' repository on GitHub. The function takes in the original data.json dataframe and returns it with the changes noted below.\n",
+    "After data acquisition, the dataframe was analyzed and cleaned to facilitate functional exploration and clarify variable confusion. The preparation of this data can be replicated using the ______ function saved within the prepare.py file inside the [Lyrical Evolution](https://github.com/CBRJ-Lyrical-Metrics/song-lyrics-capstone) repository on GitHub. The function takes in the original ______ dataframe and returns it with the changes noted below.\n",
     "\n",
     "**Steps Taken to Clean & Prepare Data:**\n",
     "\n",
@@ -245,15 +260,22 @@
     "    - Make all text lowercase\n",
     "    - Normalize, encode, and decode to remove accented text and special characters\n",
     "    - Tokenize strings to break words and punctuation into discrete units\n",
-    "    - Stem and Lemmatize words to acquire base words\n",
+    "    - Lemmatize words to acquire base words\n",
     "    - Remove stopwords\n",
     "    - Rename columns\n",
+    "    \n",
+    "___\n",
+    "\n",
+    "- Additional Cleaning:\n",
+    "\n",
+    "\n",
+    "\n",
     "---   \n",
     "- Address missing values, data errors, unnecessary data, and unclear values:\n",
-    "    - Replace Jupyter Notebook values with Python after manually verifying most Jupyter Notebook entires used the Python programming language \n",
-    "    - Drop missing values to prevent impediments in exploration and modeling: 9 documents/observations that had null values in the language column \n",
-    "    - Drop all rows where README length was 0\n",
-    "    - Total dropped documents = 32\n",
+    "    - \n",
+    "    - Drop missing values to prevent impediments in exploration and modeling: ______ documents/observations that had null values in the ______ column \n",
+    "    - Drop all rows where ________\n",
+    "    - Total dropped documents = _______\n",
     "---    \n",
     "- Create feature engineered columns:\n",
     "    - unique words\n",
